--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-background-color: #1D4221;
+background-color: #4215cc;
 color: white;
 font-family: "Bai Jamjuree", sans-serif;
 display: flex;
@@ -10,7 +10,7 @@ margin: 0;
 }
 
 button {
-background-color: #64A712;
+background-color: #c5b3d9;
 color: white;
 font-family: "Bai Jamjuree", sans-serif;
 }
